# serializer version: 1
# name: test_switch[amax_3000][switch.bosch_amax_3000_output_a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.bosch_amax_3000_output_a',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Output A',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_output_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[amax_3000][switch.bosch_amax_3000_output_a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bosch AMAX 3000 Output A',
    }),
    'context': <ANY>,
    'entity_id': 'switch.bosch_amax_3000_output_a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[b5512][switch.bosch_b5512_us1b_output_a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.bosch_b5512_us1b_output_a',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Output A',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JQ917ACKQ33HHM7YCFXYZX51_output_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[b5512][switch.bosch_b5512_us1b_output_a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bosch B5512 (US1B) Output A',
    }),
    'context': <ANY>,
    'entity_id': 'switch.bosch_b5512_us1b_output_a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[solution_3000][switch.bosch_solution_3000_output_a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.bosch_solution_3000_output_a',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Output A',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234567890_output_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[solution_3000][switch.bosch_solution_3000_output_a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bosch Solution 3000 Output A',
    }),
    'context': <ANY>,
    'entity_id': 'switch.bosch_solution_3000_output_a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
